# wabbajack_modlist_extractor

./: README.md  extract.py  pyproject.toml
